correct minor alignment issue with overlay image

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -11,9 +11,7 @@
   transition: all 0.2s;
   /* border: 1px solid grey;  */ 
 }
-/* .show-modal {
-  display: block;
-} */
+
 .image-wrapper {
   width: 100%;
   margin-left: -2.5%;
@@ -28,14 +26,14 @@ img {
 
 .close-btn {
   text-align: right;
-  font-size: 2.5rem;
+  font-size: 2rem;
   color: gray;
   height: 3vh;
   font-weight: 100;
   position: absolute;
   top: 5px;
   right: 3%;
-  padding: 1%;
+  padding: -1%;
   padding-bottom: 1%;
   cursor: pointer;
   /* border: 1px solid gray; */
